docs and retention updates
